add email and phone#

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
             <img class="avatar" src="images/ME.jpg">
             <div >
                 <h3>Jamey LaMar</h3>
-                <p>Frontend Developer</p>
-                <p>Backend Developer</p>
-                <h4>Davenport, IA</h4>
+                <h4>Full Stack Developer</h4>
+                <h5>563.676.6867</h5>
+                <p>Davenport, IA</p>
+                <p>superjamey@gmail.com</p>
             </div>
         </div>
     </body>
