add quote and minor changes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
             <div >
                 <h3>Jamey LaMar</h3>
                 <h4>Full Stack Developer</h4>
-                <h5>563.676.6867</h5>
+                <p>563.676.6867</p>
                 <p>Davenport, IA</p>
-                <p>superjamey@gmail.com</p>
+                <h5><a href="mailto:superjamey@gmail.com">superjamey@gmail.com</a></h5>
             </div>
+        </div>
+        <div class="quote">
+            <p>How I became superjamey:</p>
+            <p>"In a factory where I was working maintenance, we were upgrading from 220v to 480v.</p>
+            <p>Two outside electricians were doing the job, a tall skinny one and a short fat one.</p>
+            <p>The short one preceded everyone's name with 'super'. So as he walked by he called</p>
+            <p>me Super Jamey!"</p>
         </div>
     </body>
 </html>
