add major presentation updates

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
                 <h5><a href="mailto:superjamey@gmail.com">superjamey@gmail.com</a></h5>
             </div>
         </div>
-        <div class="quote">
+        <h2 id="quote">"Those who know, don't speak. Those who speak, don't know."</h2>
+        <div class="story">
             <p>How I became superjamey:</p>
             <p>"In a factory where I was working maintenance, we were upgrading from 220v to 480v.</p>
             <p>Two outside electricians were doing the job, a tall skinny one and a short fat one.</p>
-            <p>The short one preceded everyone's name with 'super'. So as he walked by he called</p>
+            <p>The short one preceded everyone's name with 'super'. So when he walked by he called</p>
             <p>me Super Jamey!"</p>
         </div>
     </body>
