add background pic and adjust text placement

--- a/sadness.html
+++ b/sadness.html
@@ -4,15 +4,17 @@
         <link rel="stylesheet" href="sadstyles.css" />
     </head>
     <body>
-        
-        <h1>Why Can't I Quit?</h1>
-        <h3>September 28, 2022</h3>
-        <div id="paragraph">
-            <p>I feel like the biggest piece of shit. My struggle with quitting smoking</p>
-            <p>has removed me from the kidney transplant list. I am feeling very down</p>
-            <p>and now I don't seem to give a shit about anything anymore. I have failed</p>
-            <p>myself, the kidney transplant team, and the countless people who pray for</p>
-            <p>me. I just feel like giving up.</p>
+        <div id="screen">
+            <img class="sadness" src="images/sadness.jpg">
+            <h1>Why Can't I Quit?</h1>
+            <h3>September 28, 2022</h3>
+            <div id="paragraph">
+                <p>I feel like the biggest piece of shit. My struggle with quitting smoking</p>
+                <p>has removed me from the kidney transplant list. I am feeling very down</p>
+                <p>and now I don't seem to give a shit about anything anymore. I have failed</p>
+                <p>myself, the kidney transplant team, and the countless people who pray for</p>
+                <p>me. I just feel like giving up.</p>
+            </div>
         </div>
     </body>
  </html>   
