--- a/birthday.html
+++ b/birthday.html
@@ -4,7 +4,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="birthdaystyles.css">
+        <link rel="stylesheet" href="birthday.css">
     </head>
     <body>
         <div id="header">
