--- a/birthday.html
+++ b/birthday.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Joe's birthday! 🎉</h1>
-            <img id="bff-img" src="images/JoeT.jpg">
-            <h2 id="bday-age">46 years old</h2>
-            <h4 id="bday-date">10.04.1976</h4>
+            <h1>Today is Charlie's birthday! 🎉</h1>
+            <img id="bff-img" src="images/Charlie.jpg">
+            <h2 id="bday-age">91 years old</h2>
+            <h4 id="bday-date">11.03.1931</h4>
         </div>
         
         <div class="gift-section">
